# facility-agent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
.claude/: settings.json
.claude/agents/: implementer-agent.md  reviewer-agent.md  spec-agent.md
.claude/hooks/: enforce_check.sh  quality_gate.sh  require_spec.sh
.github/workflows/: ci.yml
.run/: Check.run.xml  FastAPI Dev.run.xml  Test.run.xml
alembic/: env.py
alembic/versions/: 14db6c81d4f0_initial_schema.py
app/: auth.py  config.py  dependencies.py  domain.py  logging.py  main.py  mcp_server.py  rate_limit.py
app/extraction_targets/: covenant_waiver.py  term_sheet.py
app/repositories/: agreement_repository.py  in_memory_agreement_repository.py  in_memory_extraction_job_repository.py  orm_models.py  postgres_agreement_repository.py
app/routers/: agreements.py  extractions.py  health.py  schemas.py
app/services/: agreement_service.py  extraction_job.py  extraction_job_service.py  extraction_service.py
docs/: PRD.md
docs/adr/: 0001-invoices-out-of-scope.md  0002-is-continuing-option-a.md  0003-facility-agreement-status-computed-overlay.md  0004-covenant-test-result-referenced-not-embedded.md  0005-no-pytest-in-phase-1.md  0006-claude-md-comprehensive-layering-doc.md  0007-single-domain-module-no-package-split.md  0008-business-rule-validation-to-422.md  0009-default-event-mutable.md  0010-audit-timestamps-in-model-layer.md  0011-matured-status-uses-date-today.md  0012-literal-enums-for-bounded-domain-strings.md  0013-in-memory-repository-mutation-by-reference.md  0014-sync-by-default-no-real-io.md  0015-first-sync-to-async-boundary.md  0016-project-scoped-hooks-quality-gate.md  0017-stop-hook-enforcement-backstop.md  0018-mcp-server-fastmcp-stdio.md  0019-database-backend-selection.md  (+10 more)
scripts/: mcp_server_seeded.py  seed_example_data.py  smoke_test_extraction.py  smoke_test_mcp_server.py  smoke_test_persistence.py
tests/: conftest.py  test_agreement_repository.py  test_agreements.py  test_auth.py  test_covenant_test_results.py  test_default_events.py  test_extraction_job_service.py  test_extractions.py  test_health.py  test_logging.py  test_mcp_server.py  test_postgres_agreement_repository.py  test_rate_limit.py
(+14 files in other folders)
