[project]
name = "facility-agent"
version = "0.1.0"
description = "Facility management agent API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.13.4",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pyright>=1.1.400",
    "ruff>=0.11.0",
]
test = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]

[tool.uv]
default-groups = ["dev", "test"]

[tool.mypy]
strict = true
python_version = "3.13"
files = ["app", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pyright]
include = ["app", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["FAST", "ANN", "E", "F", "I", "UP", "B", "SIM"]
